--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@
 {
     display: grid;
     place-items: center;
-    padding: 40px 0;
+    padding: 90px 0;
     grid-gap: 20px;
     grid-template-columns: repeat(3,1fr);
 }
@@ -146,6 +146,45 @@
 {
     transform: translateY(-5px);
 }
+
+.real_final_section
+{
+    width: 100%;
+    height: auto;
+    padding: 20px 0;
+    display: grid;
+    place-items: center;
+}
+.container_real
+{
+    width: 90%;
+    height: auto;
+    display: grid;
+    place-items: center;
+    
+}
+.text_img{
+    width: 90%;
+    height: auto;
+    display: grid;
+    place-items: center;
+    grid-template-columns: repeat(2,1fr);
+}
+#lol
+{
+    width: 100%;
+}
+.lol_text
+{
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
 .container_footer
 {
     height: 75px;
@@ -161,7 +200,8 @@
 {
     text-decoration: none;
     display: flex;
-    align-content: center center;
+    justify-content: center;
+    align-items: center;
     gap: 5px;
 }
 .coulex{
