--- a/styles.css
+++ b/styles.css
@@ -185,6 +185,22 @@
     align-items: center;
 }
 
+.section_carousel {
+    width: 100%;
+    padding: 40px 0;
+  }
+  .container_carousel {
+    width: 80%;
+    max-height: 1000px;
+    margin: 0 auto;
+  }
+  .carousel-inner 
+  {
+    height: 500px;
+    border-radius: 25px;
+  }
+  
+
 .container_footer
 {
     height: 75px;
