--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,9 @@
 {
     width: 100%;
     height: 75px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: rgb(243, 238, 238);
 }
 .container_navbar
@@ -18,27 +21,33 @@
     height: auto;
     display: flex;
     justify-content: space-between;
-    line-height: 75px;
-}
-#title
-{
-    padding-left: 10px ;
+    align-items: center;
 }
 
+.li_list
+{
+    display: flex;
+    margin-right: 20px;
+}
 .ul_list
 {
     display: flex;
     justify-content: space-between;
-    gap: 10px;   
+    list-style: none;
+    gap: 20px;  
+     
 }
-.li_list
+.link
 {
+    text-decoration: none;
+    color: inherit;
+    transition: .3s ease-in-out;
+}
+.link:hover
+{
+    color: black;
+}
 
-}
-.dropdown
-{
-    padding-right: 10px;
-}
 
 .container_main
 {
@@ -69,7 +78,10 @@
 }
 .article_img
 {
-    
+    width: 100%;
+    height: auto;
+    display: grid;
+    place-items: center;
 }
 .container_img
 {
@@ -145,6 +157,7 @@
 .cards:hover
 {
     transform: translateY(-5px);
+    color: black;
 }
 
 .real_final_section
@@ -197,6 +210,7 @@
   .carousel-inner 
   {
     height: 500px;
+    min-height: 140px;
     border-radius: 25px;
   }
   
@@ -224,4 +238,109 @@
     font-size: 20px;
     font-weight: bold;
 }
+
+
+@media screen and (max-width: 910px) 
+{
+
+.container_img
+{
+    display: grid;
+    place-items: center;
+    grid-template-columns: 1fr;
+}
+.article_info
+{
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+}
+.info
+{
+    font-size: 25px;
+    text-align: center;
+}
+
+.habilities 
+{
+    display: grid;
+    place-items: center;
+    padding: 20px 0;
+    grid-gap: 20px;
+    grid-template-columns: 1fr;
+}
+.container_cards
+{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 20px 0;
+    gap: 30px;
+}
+.text_img
+{
+    width: 90%;
+    height: auto;
+    display: grid;
+    place-items: center;
+    grid-template-columns: 1fr;
+}
+.lol_text
+{
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+   
+}
+#lol_text
+{
+    display: flex;
+    flex-direction: column-reverse;
+}
+.carousel-inner 
+  {
+    height: 300px;
+    border-radius: 25px;
+  }
+.container_footer 
+{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(19, 19, 19);
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0;
+}
+
+}
+
+
+
+@media screen and (max-width: 400px) 
+{
+    .container_navbar
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+.container_main
+{
+    display: grid;
+    grid-template-columns: 1fr;
+}
+.habilities span
+{
+    font-size: 30px;    
+}
+}
+    
+    
+
+
 
