--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
-*{
+*
+{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-    color:  rgb(150, 131, 131);
+    color: rgb(83, 83, 83);
 }
 
 .container_header
@@ -17,26 +19,52 @@
 }
 .container_navbar
 {
-    width: 90%;
-    height: auto;
+    width: 100%;
+    height: 75px;
     display: flex;
+    z-index: 10;
     justify-content: space-between;
     align-items: center;
+    padding: 20px;
+    position: fixed;
+    background-color: rgb(243, 238, 238)
 }
 
-.li_list
+#check_label
 {
+    display: none;
+}
+label
+{
+    width: 30px;
+    height: 30px;
     display: flex;
-    margin-right: 20px;
+    flex-direction: column;
+    gap: 10px;
+    display: none;
+    cursor: pointer;
+}
+
+.line
+{
+    width: 30px;
+    height: 4px;
+    background-color: #000;
+    border-radius: 4px;
 }
 .ul_list
 {
     display: flex;
     justify-content: space-between;
     list-style: none;
-    gap: 20px;  
-     
+    gap: 20px;      
 }
+.li_list
+{
+    display: flex;
+    margin-right: 20px;
+}
+
 .link
 {
     text-decoration: none;
@@ -47,7 +75,6 @@
 {
     color: black;
 }
-
 
 .container_main
 {
@@ -61,7 +88,6 @@
 {
     width: 90%;
     height: auto;
-    padding: 40px;
     display: grid;
     place-items: center;
 }
@@ -138,20 +164,21 @@
 }
 .container_cards
 {
-    display: flex;
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     place-items: center;
-    justify-content: center;
     padding: 20px 0;
-    gap: 30px;
 }
 .cards
 {
-    width: 100%;
+    width: auto;
     height: 100%;
     padding: 20px;
     transition: .3s ease-in-out;
     box-shadow: 5px 5px 10px;
-    border-radius: 10px 60px 30px;
+    border-radius: 25px;
     background-color: rgb(236, 229, 229);
 }
 .cards:hover
@@ -183,10 +210,12 @@
     place-items: center;
     grid-template-columns: repeat(2,1fr);
 }
-#lol
+.img_service
 {
-    width: 100%;
+    width: 80%;
+    height: auto;
 }
+
 .lol_text
 {
     width: 100%;
@@ -198,30 +227,63 @@
     align-items: center;
 }
 
-.section_carousel {
-    width: 100%;
-    padding: 40px 0;
-  }
-  .container_carousel {
+.section_clients
+{
+    height: 100%;
+    height: auto;
+    display: grid;
+    padding: 20px 0;
+    place-items: center;
+}
+.container_clients
+{
     width: 80%;
-    max-height: 1000px;
-    margin: 0 auto;
-  }
-  .carousel-inner 
-  {
-    height: 500px;
-    min-height: 140px;
+    height: auto;
+    display: grid;
+    place-items: center;
+    grid-gap: 30px;
+    grid-template-columns: repeat(4,1fr);
+}
+.cards_clients
+{
+    width: 100%;
+    height: auto;
     border-radius: 25px;
-  }
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 0.5fr;
+    transition: .3s ease-in-out;
+    box-shadow: 5px 5px 10px;
+    background-color: rgb(196, 187, 187);
+}
+.cards_clients:hover
+{
+    transform: translateY(-5px);
+}
+.img_clients
+{
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+.text_clients
+{
+    width: 100%;
+    height: auto;
+    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr;
+}
   
 
 .container_footer
 {
-    height: 75px;
     width: 100%;
-    line-height: 75px;
-    grid-gap: 15px;
+    height: 75px;
     display: flex;
+    gap: 5px;
+    align-items: center;
     justify-content: center;
     background-color: rgb(236, 229, 229);
 }
@@ -238,11 +300,80 @@
     font-size: 20px;
     font-weight: bold;
 }
+.footer_icons
+{
+    width: 20px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 40px;
+    gap: 10px;
+}
+.bi
+{
+    transition: .3s ease-in-out;
+}
+.bi:hover
+{
+    font-size: 20px;
+}
 
-
-@media screen and (max-width: 910px) 
+@media screen and (max-width: 768px) 
 {
 
+    .ul_list
+    {
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        left: -100vw;
+        top: 70px; 
+        backdrop-filter: blur(4px);
+        background-color: rgba(243, 238, 238, .60);
+        color: #fff;
+        display: flex;
+        flex-direction: column;     
+        align-items: center; 
+        justify-content: flex-start;
+        padding: 30px;
+        transition: .3s ease-in-out;
+    }
+
+    #check_label:checked ~ .ul_list
+    {
+        left: 0;
+    }
+
+
+    label
+{
+    width: 20px;
+    height: 30px;
+    margin: auto 3px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    cursor: pointer;
+}
+
+.line
+{
+    width: 30px;
+    height: 4px;
+    background-color: #000;
+    border-radius: 4px;
+    transition: .3s ease-in-out;
+}
+    #check_label:checked ~ .hamburger .line:nth-child(1)
+    {
+        transform: rotate(45deg) translate(5px, 5px);
+    }
+
+    #check_label:checked ~ .hamburger .line:nth-child(2)
+    {
+        transform: rotate(-45deg) translate(5px, -5px);
+    }
 .container_img
 {
     display: grid;
@@ -272,9 +403,9 @@
 }
 .container_cards
 {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
+    place-items: center;
     padding: 20px 0;
     gap: 30px;
 }
@@ -298,11 +429,36 @@
     display: flex;
     flex-direction: column-reverse;
 }
-.carousel-inner 
-  {
-    height: 300px;
-    border-radius: 25px;
-  }
+
+.container_clients
+{
+    width: 90%;
+    height: auto;
+    display: grid;
+    place-items: center;
+    grid-template-columns: 1fr;
+}
+.cards_clients
+{
+   width: 80%;
+   height: auto;
+   display: grid;
+   place-items: center;
+   grid-template-columns: 1fr;
+   grid-template-rows: 150px 180px;
+} 
+
+.img_clients
+{
+    width: 100%;
+    height: 100%;
+}
+.text_clients
+{
+    width: 100%;
+    height: 100%;
+}
+
 .container_footer 
 {
     width: 100%;
@@ -318,27 +474,6 @@
 
 }
 
-
-
-@media screen and (max-width: 400px) 
-{
-    .container_navbar
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
-.container_main
-{
-    display: grid;
-    grid-template-columns: 1fr;
-}
-.habilities span
-{
-    font-size: 30px;    
-}
-}
     
     
 
